--- a/src/FINALE/Messenger.css
+++ b/src/FINALE/Messenger.css
@@ -74,7 +74,7 @@
 
 
 
-
+/* 
 
 
 .messenger {
@@ -114,4 +114,76 @@
 .pinned {
   color: red;
   font-weight: bold;
+} */
+
+
+
+.chat-container {
+  max-width: 600px;
+  margin: auto;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+}
+
+.chat-box {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px;
+  background-color: #f2f2f2;
+  color:black
+}
+
+.chat-bubble {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 80%;
+  position: relative;
+}
+
+.user {
+  background-color: #dcf8c6;
+  align-self: flex-end;
+}
+
+.bot {
+  background-color: #fff;
+  align-self: flex-start;
+}
+
+.input-area {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid #ccc;
+}
+
+.input-area input {
+  flex: 1;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.input-area button {
+  padding: 10px 20px;
+  margin-left: 10px;
+}
+
+.loading {
+  text-align: center;
+  padding: 10px;
+  color: #888;
+}
+
+.error {
+  color: red;
+  text-align: center;
+  padding: 10px;
+}
+
+.time {
+  font-size: 10px;
+  color: gray;
+  margin-top: 5px;
 }
