--- a/src/FINALE/Modal.css
+++ b/src/FINALE/Modal.css
@@ -1,9 +1,9 @@
 .modal-backdrop {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  left: 200px;
+  width:800px;
+  height: 600px;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
