--- a/src/FINALE/Videos.css
+++ b/src/FINALE/Videos.css
@@ -34,7 +34,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 200px;
+  width: 110px;
   height: 100%;
   background-color: #111;
   color: white;
@@ -60,6 +60,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
+ margin-right: 150px;
 }
 
 .cartoon-card {
